syntax = "proto3";

option go_package = "./";

package test;

service ComputeService {
    rpc GetUsers (Empty) returns (stream UserInfo);
    rpc GetUser (Id) returns (UserInfo);
    rpc CreateUser (UserInfo) returns (Id);
    rpc UpdateUser (UserInfo) returns (Status);
    rpc DeleteUser (Id) returns (Status);
    
    rpc GetMovies (Empty) returns (stream MovieInfo);
    rpc GetMovie (Id) returns (MovieInfo);
    rpc CreateMovie (MovieInfo) returns (Id);
    rpc UpdateMovie (MovieInfo) returns (Status);
    rpc DeleteMovie (Id) returns (Status);
}

message Empty {}

message MovieInfo {
    string id = 1;
    string isbn = 2;
    string title = 3;
    Director director = 4;
}

message Director {
    string firstname = 1;
    string lastname = 2;
}

message UserInfo {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string watched_movies = 5;
}

message Id {
    string value = 1;
}

message Status {
    int32 value = 1;
}